@@ -13,18 +13,18 @@
 #' @param pooled A character string indicating whether results for the
 #'   fixed effect (\code{"fixed"}) or random effects model
 #'   (\code{"random"}) should be plotted. Can be abbreviated.
-#' @param leftcols A character vector specifying (additional) columns
-#'   to be plotted on the left side of the forest plot or a logical
-#'   value (see \code{\link{forest.meta}} help page for details).
+#' @param leftcols A character vector specifying columns to be plotted
+#'   on the left side of the forest plot or a logical value (see
+#'   Details).
 #' @param leftlabs A character vector specifying labels for
 #'   (additional) columns on left side of the forest plot (see
-#'   \code{\link{forest.meta}} help page for details).
-#' @param rightcols A character vector specifying (additional) columns
-#'   to be plotted on the right side of the forest plot or a logical
-#'   value (see \code{\link{forest.meta}} help page for details).
+#'   Details).
+#' @param rightcols A character vector specifying columns to be
+#'   plotted on the right side of the forest plot or a logical value
+#'   (see Details).
 #' @param rightlabs A character vector specifying labels for
 #'   (additional) columns on right side of the forest plot (see
-#'   \code{\link{forest.meta}} help page for details).
+#'   Details).
 #' @param digits Minimal number of significant digits for treatment
 #'   effects and confidence intervals, see \code{print.default}.
 #' @param small.values A character string specifying whether small
@@ -65,7 +65,7 @@
 #' determine the order of values. If \code{sortvar} is character it
 #' must be a permutation of the treatment names. It is also possible
 #' to provide either \code{sortvar = Pscore}, \code{sortvar =
-#' "Pscore"}, \code{sortvar = -Pscore} or \code{sortvar = "-Pscore"}
+#' "Pscore"}, \code{sortvar = -Pscore}, or \code{sortvar = "-Pscore"}
 #' in order to sort treatments according to the ranking generated by
 #' \code{\link{netrank}} which is called internally.  Similar
 #' expressions are possible to sort by treatment comparisons
@@ -73,14 +73,38 @@
 #' seTE}), number of studies with direct treatment comparisons
 #' (\code{sortvar = k}), and direct evidence proportion (\code{sortvar
 #' = prop.direct}, see also \code{\link{netmeasures}}).
+#'
+#' The arguments \code{leftcols} and \code{rightcols} can be used to
+#' specify columns which are plotted on the left and right side of the
+#' forest plot, respectively. The following columns are available:
+#' \tabular{ll}{
+#' \bold{Name} \tab \bold{Definition} \cr
+#' \code{"studlab"} \tab Treatments \cr
+#' \code{"TE"} \tab Network estimates (either from fixed or random
+#'   effects model) \cr
+#' \code{"seTE"} \tab Corresponding standard errors \cr
+#' \code{"pscore"} \tab P-scores (see \code{\link{netrank}}) \cr
+#' \code{"k"} \tab Number of studies in pairwise comparisons \cr
+#' \code{"prop.direct"} \tab Direct evidence proportions (see
+#'   \code{\link{netmeasures}}) \cr
+#' \code{"effect"} \tab (Back-transformed) network estimates \cr
+#' \code{"ci"} \tab Confidence intervals \cr
+#' \code{"effect.ci"} \tab (Back-transformed) network estimates and
+#'   confidence intervals
+#' }
+#'
+#' As a sidenote, the rather odd column name \code{"studlab"} to
+#' describe the treatment comparisons comes from internally calling
+#' \code{\link{forest.meta}} which uses study labels as the essential
+#' information.
 #' 
 #' Argument \code{add.data} can be used to add additional columns to
-#' the forest plot. This argument must be a data frame with the same
-#' row names as the treatment effects matrices in R object \code{x},
-#' i.e., \code{x$TE.fixed} or \code{x$TE.random}.
+#' the forest plot. This argument must be a data frame with row names
+#' equal to the treatment names in R object \code{x}, i.e.,
+#' \code{x$trts}.
 #' 
-#' For more information see help page of \code{\link{forest.meta}}
-#' function.
+#' See help page of \code{\link{forest.meta}} for more information on
+#' the generation of forest plots and additional arguments.
 #' 
 #' @author Guido Schwarzer \email{sc@@imbi.uni-freiburg.de}
 #' 
@@ -116,7 +140,6 @@
 #' forest(net2, xlim = c(-1.5, 1), ref = "plac",
 #'        xlab = "HbA1c difference",
 #'        rightcols = c("effect", "ci", "Pscore"),
-#'        rightlabs = "P-Score",
 #'        just.addcols = "right")
 #' 
 #' # Add column with P-Scores on left side of forest plot
@@ -124,7 +147,6 @@
 #' forest(net2, xlim = c(-1.5, 1), ref = "plac",
 #'        xlab = "HbA1c difference",
 #'        leftcols = c("studlab", "Pscore"),
-#'        leftlabs = c("Treatment", "P-Score"),
 #'        just.addcols = "right")
 #' 
 #' # Sort forest plot by descending P-Score
@@ -132,7 +154,6 @@
 #' forest(net2, xlim = c(-1.5, 1), ref = "plac",
 #'        xlab = "HbA1c difference",
 #'        rightcols = c("effect", "ci", "Pscore"),
-#'        rightlabs = "P-Score",
 #'        just.addcols = "right",
 #'        sortvar = -Pscore)
 #' 
@@ -221,11 +242,34 @@ forest.netmeta <- function(x,
   chklogical(backtransf)
   meta:::chkchar(lab.NA)
   ##
-  if (missing(leftlabs))
+  stdlabs <- c("event.e", "n.e", "event.c", "n.c",
+               "mean.e", "sd.e", "mean.c", "sd.c",
+               "n", "time", "event",
+               "TE", "seTE",
+               "time.e", "time.c",
+               "effect", "ci", "effect.ci",
+               "w.fixed", "w.random")
+  ##
+  if (missing(leftlabs)) {
+    leftlabs <- leftcols
+    leftlabs[leftcols %in% stdlabs] <- NA
+    ##
     if (length(reference.group) > 1)
-      leftlabs <- "Comparison"
+      leftlabs[matchVar(leftcols, "studlab")] <- "Comparison"
     else
-      leftlabs <- "Treatment"
+      leftlabs[matchVar(leftcols, "studlab")] <- "Treatment"
+  }
+  else if (length(leftcols) != length(leftlabs)) {
+    if (length(reference.group) > 1)
+      leftlabs[matchVar(leftcols, "studlab")] <- "Comparison"
+    else
+      leftlabs[matchVar(leftcols, "studlab")] <- "Treatment"
+  }
+  ##
+  if (missing(rightlabs)) {
+    rightlabs <- rightcols
+    rightlabs[rightcols %in% stdlabs] <- NA
+  }
   
   
   ##
@@ -297,43 +341,28 @@ forest.netmeta <- function(x,
       smlab  <- text.pooled
   }
   ##
-  idx1 <- charmatch(tolower(rightcols), "pscore", nomatch = NA)
-  sel1 <- !is.na(idx1) & idx1 == 1
-  if (any(sel1))
-    rightcols[sel1] <- "Pscore"
+  rightcols <- setCol(rightcols, rightlabs, "Pscore")
+  rightlabs <- setLab(rightlabs, rightcols, "Pscore", "P-score")
   ##
-  idx2 <- charmatch(tolower(leftcols), "pscore", nomatch = NA)
-  sel2 <- !is.na(idx2) & idx2 == 1
-  if (any(sel2))
-    leftcols[sel2] <- "Pscore"
+  rightcols <- setCol(rightcols, rightlabs, "k")
+  rightlabs <- setLab(rightlabs, rightcols, "k", "Direct\nComparisons")
+  ##
+  rightcols <- setCol(rightcols, rightlabs, "prop.direct")
+  rightlabs <- setLab(rightlabs, rightcols, "prop.direct",
+                      "Direct Evidence\nProportion")
+  ##
+  leftcols <- setCol(leftcols, leftlabs, "Pscore")
+  leftlabs <- setLab(leftlabs, leftcols, "Pscore", "P-score")
+  ##
+  leftcols <- setCol(leftcols, leftlabs, "k")
+  leftlabs <- setLab(leftlabs, leftcols, "k", "Direct\nComparisons")
+  ##
+  leftcols <- setCol(leftcols, leftlabs, "prop.direct")
+  leftlabs <- setLab(leftlabs, leftcols, "prop.direct",
+                     "Direct Evidence\nProportion")
   ##
   sortvar.c <- deparse(substitute(sortvar))
   sortvar.c <- gsub("\"", "", sortvar.c)
-  ##
-  idx3 <- charmatch(tolower(sortvar.c), "pscore", nomatch = NA)
-  sel3 <- !is.na(idx3) & idx3 == 1
-  idx4 <- charmatch(tolower(sortvar.c), "-pscore", nomatch = NA)
-  sel4 <- !is.na(idx4) & idx4 == 1
-  ##
-  idx5 <- charmatch(tolower(sortvar.c), "te", nomatch = NA)
-  sel5 <- !is.na(idx5) & idx5 == 1
-  idx6 <- charmatch(tolower(sortvar.c), "-te", nomatch = NA)
-  sel6 <- !is.na(idx6) & idx6 == 1
-  ##
-  idx7 <- charmatch(tolower(sortvar.c), "sete", nomatch = NA)
-  sel7 <- !is.na(idx7) & idx7 == 1
-  idx8 <- charmatch(tolower(sortvar.c), "-sete", nomatch = NA)
-  sel8 <- !is.na(idx8) & idx8 == 1
-  ##
-  idx9 <- charmatch(tolower(sortvar.c), "k", nomatch = NA)
-  sel9 <- !is.na(idx9) & idx9 == 1
-  idx10 <- charmatch(tolower(sortvar.c), "-k", nomatch = NA)
-  sel10 <- !is.na(idx10) & idx10 == 1
-  ##
-  idx11 <- charmatch(tolower(sortvar.c), "prop.direct", nomatch = NA)
-  sel11 <- !is.na(idx11) & idx11 == 1
-  idx12 <- charmatch(tolower(sortvar.c), "-prop.direct", nomatch = NA)
-  sel12 <- !is.na(idx12) & idx12 == 1
   
   
   ##
@@ -395,34 +424,25 @@ forest.netmeta <- function(x,
     ##
     ## Sort dataset according to argument sortvar
     ##
-    if (any(sel3))
+    if (any(matchVar(sortvar.c, "pscore")))
       sortvar <- Pscore
-    ##
-    if (any(sel4))
+    else if (any(matchVar(sortvar.c, "-pscore")))
       sortvar <- -Pscore
-    ##
-    if (any(sel5))
+    else if (any(matchVar(sortvar.c, "te")))
       sortvar <- dat.i$TE
-    ##
-    if (any(sel6))
+    else if (any(matchVar(sortvar.c, "-te")))
       sortvar <- -dat.i$TE
-    ##
-    if (any(sel7))
+    else if (any(matchVar(sortvar.c, "sete")))
       sortvar <- dat.i$seTE
-    ##
-    if (any(sel8))
+    else if (any(matchVar(sortvar.c, "-sete")))
       sortvar <- -dat.i$seTE
-    ##
-    if (any(sel9))
+    else if (any(matchVar(sortvar.c, "k")))
       sortvar <- dat.i$k
-    ##
-    if (any(sel10))
+    else if (any(matchVar(sortvar.c, "-k")))
       sortvar <- -dat.i$k
-    ##
-    if (any(sel11))
+    else if (any(matchVar(sortvar.c, "prop.direct")))
       sortvar <- dat.i$prop.direct
-    ##
-    if (any(sel12))
+    else if (any(matchVar(sortvar.c, "-prop.direct")))
       sortvar <- -dat.i$prop.direct
     ##
     if (!is.null(sortvar)) {
@@ -485,7 +505,7 @@ forest.netmeta <- function(x,
          leftcols = leftcols,
          leftlabs = leftlabs,
          rightcols = rightcols,
-         rightlabs = if (missing(rightlabs)) NULL else rightlabs,
+         rightlabs = rightlabs,
          smlab = smlab,
          lab.NA = lab.NA,
          ##
