@@ -29,21 +29,21 @@ reference treatment (default) or vice versa.}
 
 \item{labels}{An optional vector with treatment labels.}
 
-\item{leftcols}{A character vector specifying (additional) columns
-to be plotted on the left side of the forest plot or a logical
-value (see \code{\link{forest.meta}} help page for details).}
+\item{leftcols}{A character vector specifying columns to be plotted
+on the left side of the forest plot or a logical value (see
+Details).}
 
 \item{leftlabs}{A character vector specifying labels for
 (additional) columns on left side of the forest plot (see
-\code{\link{forest.meta}} help page for details).}
+Details).}
 
-\item{rightcols}{A character vector specifying (additional) columns
-to be plotted on the right side of the forest plot or a logical
-value (see \code{\link{forest.meta}} help page for details).}
+\item{rightcols}{A character vector specifying columns to be
+plotted on the right side of the forest plot or a logical value
+(see Details).}
 
 \item{rightlabs}{A character vector specifying labels for
 (additional) columns on right side of the forest plot (see
-\code{\link{forest.meta}} help page for details).}
+Details).}
 
 \item{digits}{Minimal number of significant digits for treatment
 effects and confidence intervals, see \code{print.default}.}
@@ -100,7 +100,7 @@ the \code{\link[base]{order}} function is utilised internally to
 determine the order of values. If \code{sortvar} is character it
 must be a permutation of the treatment names. It is also possible
 to provide either \code{sortvar = Pscore}, \code{sortvar =
-"Pscore"}, \code{sortvar = -Pscore} or \code{sortvar = "-Pscore"}
+"Pscore"}, \code{sortvar = -Pscore}, or \code{sortvar = "-Pscore"}
 in order to sort treatments according to the ranking generated by
 \code{\link{netrank}} which is called internally.  Similar
 expressions are possible to sort by treatment comparisons
@@ -109,13 +109,37 @@ seTE}), number of studies with direct treatment comparisons
 (\code{sortvar = k}), and direct evidence proportion (\code{sortvar
 = prop.direct}, see also \code{\link{netmeasures}}).
 
-Argument \code{add.data} can be used to add additional columns to
-the forest plot. This argument must be a data frame with the same
-row names as the treatment effects matrices in R object \code{x},
-i.e., \code{x$TE.fixed} or \code{x$TE.random}.
+The arguments \code{leftcols} and \code{rightcols} can be used to
+specify columns which are plotted on the left and right side of the
+forest plot, respectively. The following columns are available:
+\tabular{ll}{
+\bold{Name} \tab \bold{Definition} \cr
+\code{"studlab"} \tab Treatments \cr
+\code{"TE"} \tab Network estimates (either from fixed or random
+  effects model) \cr
+\code{"seTE"} \tab Corresponding standard errors \cr
+\code{"pscore"} \tab P-scores (see \code{\link{netrank}}) \cr
+\code{"k"} \tab Number of studies in pairwise comparisons \cr
+\code{"prop.direct"} \tab Direct evidence proportions (see
+  \code{\link{netmeasures}}) \cr
+\code{"effect"} \tab (Back-transformed) network estimates \cr
+\code{"ci"} \tab Confidence intervals \cr
+\code{"effect.ci"} \tab (Back-transformed) network estimates and
+  confidence intervals
+}
 
-For more information see help page of \code{\link{forest.meta}}
-function.
+As a sidenote, the rather odd column name \code{"studlab"} to
+describe the treatment comparisons comes from internally calling
+\code{\link{forest.meta}} which uses study labels as the essential
+information.
+
+Argument \code{add.data} can be used to add additional columns to
+the forest plot. This argument must be a data frame with row names
+equal to the treatment names in R object \code{x}, i.e.,
+\code{x$trts}.
+
+See help page of \code{\link{forest.meta}} for more information on
+the generation of forest plots and additional arguments.
 }
 \examples{
 data(Senn2013)
@@ -145,7 +169,6 @@ forest(net2, xlim = c(-1.5, 1), ref = "plac",
 forest(net2, xlim = c(-1.5, 1), ref = "plac",
        xlab = "HbA1c difference",
        rightcols = c("effect", "ci", "Pscore"),
-       rightlabs = "P-Score",
        just.addcols = "right")
 
 # Add column with P-Scores on left side of forest plot
@@ -153,7 +176,6 @@ forest(net2, xlim = c(-1.5, 1), ref = "plac",
 forest(net2, xlim = c(-1.5, 1), ref = "plac",
        xlab = "HbA1c difference",
        leftcols = c("studlab", "Pscore"),
-       leftlabs = c("Treatment", "P-Score"),
        just.addcols = "right")
 
 # Sort forest plot by descending P-Score
@@ -161,7 +183,6 @@ forest(net2, xlim = c(-1.5, 1), ref = "plac",
 forest(net2, xlim = c(-1.5, 1), ref = "plac",
        xlab = "HbA1c difference",
        rightcols = c("effect", "ci", "Pscore"),
-       rightlabs = "P-Score",
        just.addcols = "right",
        sortvar = -Pscore)
 
